--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Beer Reviewed Journal</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700,' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <script src="https://use.fontawesome.com/8c766f0da6.js"></script>
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
